Fixed interface, login/logout, full CRUD operations

--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -1,13 +1,10 @@
 
 <div ng-controller = "loginController" >
   <h2>Login Page</h2>
-  <p>Scene: {{scene}}</p>
   <div>
     Username: <input type="text" placeholder="{{data.username}}" ng-model="data.username">
     Password: <input type="password" placeholder="{{data.password}}" ng-model="data.password">
   </div>
-  <div ng-click="login()" class='clickable'>
-    Login
-  </div>
+  <input type="button" ng-click="login()" value="Login">
   <p>{{login_mes}}</p>
 </div>
